fixed cropped images in photo details on mobile 3

--- a/src/components/plant/PlantDetails/PlantDetails.css
+++ b/src/components/plant/PlantDetails/PlantDetails.css
@@ -5,19 +5,20 @@
 
 .plant-details-image {
   width: 100%;
+  min-height: 200px;
   max-height: 400px;
+  background-color: #f3f4f6;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #f3f4f6;
 }
 
 .plant-details-image img {
   max-width: 100%;
-  max-height: 400px;
+  max-height: 100%;
   width: auto;
   height: auto;
-  object-fit: contain;
+  display: block;
 }
 
 .plant-details-content {
@@ -86,13 +87,7 @@
 
 @media (max-width: 640px) {
   .plant-details-image {
+    min-height: 150px;
     max-height: 50vh;
-    min-height: 200px;
-  }
-
-  .plant-details-image img {
-    max-height: 50vh;
-    object-fit: contain;
-    display: block;
   }
 }
